Refactor bot.py to support per-guild configurations for TEMP and AFK channels, enhancing auto-move functionality and timer management. Update .envexample to remove channel settings and modify README for new setup instructions and features.

--- a/.envexample
+++ b/.envexample
@@ -1,4 +1,5 @@
+# Required: Your Discord bot token
 DISCORD_BOT_TOKEN=BOT_TOKEN_HERE
-DISCORD_GUILD_ID=DISCORD_GUILD_ID
-TEMP_Channel=temp_snowflake
-AFK_Channel=afk_snowflake
+
+# Note: TEMP and AFK channels are now configured per-guild using the *setup command
+# No need to set them in .env anymore!
