Implement per-guild command prefix configuration and enhance kidnap command functionality. Update bot initialization to preload guild prefixes from storage. Modify README and config files for improved setup instructions and user experience. Update various response messages for consistency.

--- a/config.ini
+++ b/config.ini
@@ -14,8 +14,8 @@ activity_name = Lizard
 
 [urls]
 # External URLs for help and support
-readme_url = https://github.com/yourname/Lizard#readme
-kofi_url = https://ko-fi.com/yourname
+readme_url = https://github.com/dragonjt2/Lizard#readme
+kofi_url = ko-fi.com/dragnai
 
 [files]
 # File paths (relative to project root)
