- Added LizardBot_v1.0/, *.zip, and *.disabled to .gitignore - Clean up repository for v1.0 release

--- a/config.ini
+++ b/config.ini
@@ -15,7 +15,7 @@ activity_name = Lizard
 [urls]
 # External URLs for help and support
 readme_url = https://github.com/dragonjt2/Lizard#readme
-kofi_url = ko-fi.com/dragnai
+kofi_url = https://ko-fi.com/dragnai
 
 [files]
 # File paths (relative to project root)
